--- a/index.css
+++ b/index.css
@@ -12,8 +12,8 @@
 .column {
 	display: flex;
 	flex-direction: column;
-	flex: 85%;
-	overflow-x: scroll;
+	flex: 1;
+	overflow: hidden;
 }
 
 html, body, canvas {
@@ -45,6 +45,23 @@ html {
 	--heading-s: 0.5rem;
 	--body-l: 0.542rem;
 	--body-s: 0.5rem;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+	height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--main-purple);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 @media only screen and (max-width: 600px) {
